fixing text/glyphicon overlap

--- a/public/css/rozinah.css
+++ b/public/css/rozinah.css
@@ -6,7 +6,7 @@
 
 @import url("http://fonts.googleapis.com/css?family=Abel|Nunito");
 
-#sortable { padding-left: 0px; list-style-type: none; margin: auto; width: 60%; float: center; }
+#sortable { padding-left: 0px; list-style-type: none; margin: auto; width: 80%; float: center; }
 #sortable li {margin:1%; padding: 0.4em; font-size: 1.4em; text-align: center }
 
 .resetbutton {
@@ -57,7 +57,7 @@
     left: 0px;
 }
 
-.left-addon input {
+.left-addon span {
     padding-left: 30px;
 }
 
